# urbanhcf

./: .gitignore  README.md  client.py  demo-test.py  geojson_utils.py  main.py  mcp_service.py  pyproject.toml  redis_client.py  requirements.txt  urban_hcf_demo.ipynb  utils.py
.github/workflows/: keepalive.yml
agents/: counterfactual.py
backend/: .env  pyproject.toml
backend/app/: geojson_utils.py  logger.py  main.py  redis_client.py
backend/data/: Rural_mask_500m.tif  feature_data_500m.tif
backend/mcp/: mcp_service.py
backend/mcp/server/: client.py  geocode.json  geocode.py
backend/mcp_agent/: mcp_service.py
backend/mcp_agent/agents/: agent_logic.py  counterfactual.py
backend/mcp_agent/server/: client.py  geocode.json  geocode.py
backend/models/: lst_model_500m.txt
data/: LA_NDVI_SPH_2022_2023.tif  LA_urban_mask_4326.tif  Rural_mask_4326.tif
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: map_view.jsx  query_box.jsx
frontend/src/data/: sample_uhi.json
models/: lst_model.pkl  lst_model.txt
server/: geocode.py
